# map-icons

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  README.icons  copy_icons_to_debian_package_dirs.pl  copy_icons_to_dir.sh  copy_icons_to_dirs.pl  create_geoinfo-db.pl  create_icons_index.pl  create_makefile.sh  create_osm.sh  create_osm.xslt  create_overview.pl  geoinfo.db  icons.dtd  icons.xml  index.html  index_all-abs.en.html  index_all.de.html  index_all.en.html  index_dynamic.de.html  index_dynamic.en.html  index_general.de.html  index_general.en.html  index_poi.de.html  index_poi.en.html  index_rendering.de.html  index_rendering.en.html  merge-icons-all-from-svg2classic2square.sh  overview.de.html  overview.en.html  overview.html  square.big.xcf  square.small.xcf  update_icons.pl  update_thumbnails.pl
2020iconset/: readme.txt
cmake/Modules/: DefineCPackDefaults.cmake  DefineInstallationPaths.cmake  DefineProjectDefaults.cmake  MacroGetSubversionRevision.cmake
debian/: changelog  control  copyright  files  pth  rules
svg-twotone/: generatecategoryicons.sh  generateicons.sh  generatemapniksymbols.sh  recolourtopng.sh
tools/: compile_icons.pl  copy_icons_to_debian_package_dirs.pl  copy_icons_to_dir.sh  create_geoinfo-db.pl  create_osm.sh  create_overview.pl  update_icons.pl  update_thumbnails.pl
